--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,7 +1,13 @@
 use_frameworks!
+platform :ios, '8.0'
 
 target 'DoraKit_Example' do
   pod 'DoraKit', :path => '../'
+  
+  pod 'SnapKit'
+  pod 'RxSwift'
+  pod 'RxCocoa'
+  pod 'NSObject+Rx'
 
   target 'DoraKit_Tests' do
     inherit! :search_paths
